# ms-inr

./: .gitattributes  .gitignore  README.md  notes.md  pyproject.toml  run_africai.sh  run_nesvor.sh  run_nigerian_masked.sh
benchmark/: aggregate.py  run_benchmark.py
configs/: default.yaml  real_lowfield.yaml
configs/experiment/: brats.yaml  nigerian.yaml
configs/simulate/: default.yaml  twostack.yaml
docs/: AFRICAI_EXPERIMENTS.md  RUN_ON_SERVER.md
methods/: _bootstrap.py
methods/classical_srr/: README.md  requirements.txt  run.py
methods/inr_adam/: README.md  requirements.txt  run.py
methods/inr_muon/: README.md  requirements.txt  run.py
methods/nesvor/: README.md  requirements.txt  run.py
methods/trilinear/: README.md  requirements.txt  run.py
msinr/: classical.py  recon.py  runner.py  trilinear.py
msinr/common/: contracts.py  geometry.py  io.py  metrics.py  profiling.py  resample.py  roi.py
msinr/data/: dataset.py  simulate.py
msinr/forward/: multistack.py
msinr/models/: bias.py  inr.py  muon_setup.py
scripts/: compare_figure.py  leave_one_stack_out.py  make_phantom.py  prep_brats.py  prep_nigerian.py  pull_images.sh  qualitative_figure.py  register_stacks.py  rerun_e7_figs.sh  simulate_batch.py
tests/: test_pipeline.py
